Fixed bug on mobile

--- a/play/css/style.css
+++ b/play/css/style.css
@@ -1,15 +1,15 @@
+html,body{
+	width:100%;
+	height:100%;
+}
+
 body
 {
 	margin:0px;
 	padding:0px;
 	overflow:hidden;
 	background-color:black;
-}
-
-#outer
-{
-	height:1200px;
-	overflow:hidden;
+	position:absolute;
 }
 
 #map
